--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,8 @@
         "ts": "never"
       }
     ],
-    "@typescript-eslint/no-var-requires": 0
+    "@typescript-eslint/no-var-requires": 0,
+    "import/no-extraneous-dependencies": "off",
+    "consistent-return": "warn"
   }
 }
