--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "Юлия Селиванова",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.18",
+    "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
@@ -26,7 +29,13 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^6.11.2"
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.11.2",
+    "validator": "^13.9.0",
+    "winston": "^3.9.0"
   }
 }
